--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -205,7 +205,7 @@
 								{{/each}}
 								</p>
 							</div>
-							<div style="width:80px;display:table-cell">
+							<div style="width:80px;display:table-cell;vertical-align: middle;">
 							<p class="tc">
 							{{if order.supplier_user_id <= 0 && data.mall_type == 0}}
 							{{else}}
