完成订单列表和订单详情的页面

--- a/weapp/mall/templates/mall/editor/order_detail.html
+++ b/weapp/mall/templates/mall/editor/order_detail.html
@@ -247,22 +247,29 @@
         <p class="xui-info-p">支付方式：<span class="xui-info-value">{{order.pay_interface_name}}</span></p>
         <table class="xui-producttab table">
             <tr>
-                {% if suppliers|length %}<th class="xui-td-zero" width="80">供货商</th>{% endif %}
+                {% if mall_type %}<th class="xui-td-zero" width="80">供货商</th>{% endif %}
                 <th class="xui-td-img"></th>
                 <th class="xui-td-first">商品信息</th>
                 <th class="xui-td-second">单价（元）/数量</th>
                 <th class="xui-td-third">单品优惠</th>
-                {% if suppliers|length %}<th class="xui-td-third">订单状态</th>{% endif %}
+                {% if mall_type %}<th class="xui-td-third">订单状态</th>{% endif %}
                 <th class="xui-td-fourth" style="width:160px;">整单优惠</th>
                 <th class="xui-td-fifth" style="width:120px;">微众卡支付金额</th>
                 <th class="xui-td-sixth" style="width:90px;">运费</th>
             </tr>
             {% for product in order.products %}
             <tr>
-              {% if suppliers|length %}
-                  {% ifchanged product.supplier %}
-                      <td rowspan="{{product.supplier_length}}" style="text-align:center;border-right:1px solid #ddd;" width="80">{{ product.supplier_name }}</td>
-                  {% endifchanged %}
+              {% if mall_type %}
+                  {% if product.supplier %}
+                    {% ifchanged product.supplier %}
+                        <td rowspan="{{product.supplier_length}}" style="text-align:center;border-right:1px solid #ddd;" width="80">{{ product.supplier_name }}</td>
+                    {% endifchanged %}
+                  {% endif %}
+                  {% if product.supplier_user_id %}
+                    {% ifchanged product.supplier_user_id %}
+                        <td rowspan="{{product.supplier_user_length}}" style="text-align:center;border-right:1px solid #ddd;" width="80">{{ product.supplier_store_name }}</td>
+                    {% endifchanged %}
+                  {% endif %}
               {% endif %}
               <td class="xui-td-img"{% if product.noline %} style="border-top:none;"{% endif %}><img width="42" height="42" src="{{product.thumbnails_url}}"></td>
               <td class="xui-td-first"{% if product.noline %} style="border-top:none;"{% endif %}>
@@ -381,7 +388,7 @@
           </p>
           {% else %}
           <div class="xui-wSync-count">共计商品：<span class="xui-money fb">{{order.number}}</span> 件</div>
-          <div class="xui-wSync-pm">支付金额：<span class="xui-money fb">￥161.20</span></div>
+          <div class="xui-wSync-pm">支付金额：<span class="xui-money fb">￥{{ order.product_price|floatformat:"2" }}</span></div>
           {% endif %}
         </div>
     </div>
