--- a/weapp/apps/customerized_apps/group/templates/editor/groups.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/groups.html
@@ -9,7 +9,7 @@
 			<li class="active">团购</li>
 		</ul>
 	</div>
-	
+
 	<div class="xui-filterPanel mb15">
 		<div class="xui-form disT">
 			<div class="xui-col disTc">
@@ -66,25 +66,25 @@
 			<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">重&nbsp;&nbsp;&nbsp;置</a>
 		</div>
 	</div>
-	
+
 	<div class="panel panel-default xui-tableBox">
 		<div class="panel-header clearfix">
 			<a href="/apps/group/group/" class="btn btn-success fr">
 				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建团购
 			</a>
 		</div>
-		
-		<div 
+
+		<div
 			class="panel-body panel-table p0"
-			data-ui-role="advanced-table" 
-			data-app="apps/group" 
-			data-resource="groups" 
-			data-template-id="#table" 
-			data-enable-paginator="true" 
-			data-enable-sort="false" 
-			data-selectable="false" 
-			data-disable-header-select="true" 
-			data-item-count-per-page="10" 
+			data-ui-role="advanced-table"
+			data-app="apps/group"
+			data-resource="groups"
+			data-template-id="#table"
+			data-enable-paginator="true"
+			data-enable-sort="false"
+			data-selectable="false"
+			data-disable-header-select="true"
+			data-item-count-per-page="10"
 		>
 		</div>
 	</div>
@@ -99,25 +99,26 @@
 	<table class="table table-bordered xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg mb10">
 		<thead>
 			<tr>
-				<th>名称</th>
-				<th>开始时间</th>
-				<th>结束时间</th>
-				<th>状态</th>
+				<th>商品信息</th>
+				<th>开团人数</th>
+				<th>购买人数</th>
 				<th>参与人数</th>
+				<th>状态</th>
+				<th>起止时间</th>
 				<th>操作</th>
 			</tr>
 		</thead>
 		<tbody>
 		  {{each(i, item) items}}
 			<tr data-id="${item.id}">
-				<td 
+				<td
 					class="tl pl25"
-					style="width:250px; height:60px;" 
+					style="width:250px; height:60px;"
 					title="${item.name}"
 				>
-				   <a 
-					class="xui-ellipsisFox" 
-					limit="15" 
+				   <a
+					class="xui-ellipsisFox"
+					limit="15"
 					href="/apps/group/group/?id=${item.id}&related_page_id=${item.related_page_id}"
 					style="text-overflow: -o-ellipsis-lastline;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;"
 					>
@@ -125,18 +126,22 @@
 					</a>
 				</td>
 				<td>
-					${item.start_time}
+					${item.group_item_count}
 				</td>
 				<td>
-					${item.end_time}
+					${item.group_customer_count}
+				</td>
+				<td>
+					${item.group_participator_count}
 				</td>
 				<td>
 					${item.status}
 				</td>
 				<td>
-					${item.participant_count}
+					${item.start_time} - ${item.end_time}
 				</td>
 				<td>
+					<a href="/apps/group/group_participances/?id=${item.id}" class="ml5">参团详情</a>
 					{{if (item.status === '未开始' || item.status === '已结束')}}
 					<a href="javascript:void(0)" class="xa-delete" data-id=${item.id}>删除</a>
 					{{/if}}
@@ -144,7 +149,6 @@
 					<a href="javascript:void(0)" class="xa-close" data-id=${item.id}>关闭</a>
 					{{/if}}
 					<a href="javascript:void(0);" class="ml5 xa-preview" data-id=${item.id}>预览</a>
-					<a href="/apps/group/group_participances/?id=${item.id}" class="ml5">查看结果</a>
 				</td>
 			</tr>
 			{{/each}}
@@ -164,7 +168,7 @@
 <script type="text/javascript">
 $(document).ready(function() {
     var table = $('div[data-ui-role="advanced-table"]').data('view');
-	
+
 	$('body').delegate('.xa-delete', 'click', function(event) {
 		var $el = $(event.target);
 		var id = $el.data('id');
@@ -194,7 +198,7 @@ $(document).ready(function() {
 			}
 		});
 	});
-	
+
 	$('body').delegate('.xa-close', 'click', function(event) {
 		var $el = $(event.target);
 		var id = $el.data('id');
@@ -215,14 +219,14 @@ $(document).ready(function() {
 			}
 		});
 	});
-	
+
 	$('body').delegate('.xa-preview', 'click', function(event) {
 		var $el = $(event.target);
 		var id = $el.data('id');
 		var previewUrl = '/m/apps/group/m_group/?woid='+W.uid+'&id='+id;
 		window.open('/termite2/app_preview/?preview_url='+encodeURIComponent(previewUrl), '_tab');
 	});
-	
+
 	$('.xa-search').click(function(event) {
 		var name = $.trim($('[name="name"]').val());
 		var status = $.trim($('[name="status"]').val());
@@ -237,7 +241,7 @@ $(document).ready(function() {
 			emptyDataHint: '没有符合条件的数据'
 		});
 	});
-	
+
 	$('.xa-reset').click(function(event) {
 		$('[name="name"]').val('');
 		$('[name="status"]').val('0');
