--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -221,8 +221,10 @@
 					</td>
 					{{if j == 0 }}
 					<td width="140px" rowspan="${order.groups.length}">
-						{{if order.save_money != 0 && order.supplier_user_id <= 0}}
-							${ order.save_money.toFixed(2)}
+						{{if order.save_money != 0 }}
+							{{if !(order.supplier_user_id > 0 && data.mall_type == 0)}}
+								${ order.save_money.toFixed(2)}
+							{{/if}}
 						{{/if}}
 					</td>
 					<td width="100" rowspan="${order.groups.length}">
@@ -262,20 +264,26 @@
 						{{/if}}
 					</td>
 					<td width="110" rowspan="${order.groups.length}">
-						${ order.pay_money }
+						{{if (data.mall_type == 0 && order.supplier_user_id) }}
+							${ order.total_purchase_price }
+						{{else}}
+							${ order.pay_money }
+						{{/if}}
 						{{if order.postage > 0 }}
 							{{if !(data.mall_type == 0 && order.supplier_user_id) }}
 							</br>
 								<span class="xui-colorGray">(含运费：${order.postage})</span>
 							{{/if}}
 						{{/if}}
-						{{if order.weizoom_card_money > 0 && order.supplier_user_id <= 0}}
-						</br>
-							<span class="xui-weizoomCard pr">
-								<i class="xa-weizoomCardImg"></i>
+						{{if order.weizoom_card_money > 0 }}
+							{{if !(data.mall_type == 0 && order.supplier_user_id) }}
 								</br>
-								<span class="pa xa-weizoomCardHint" style="display:none;">微众卡支付&nbsp${order.weizoom_card_money}元</span>
-							</span>
+								<span class="xui-weizoomCard pr">
+									<i class="xa-weizoomCardImg"></i>
+									</br>
+									<span class="pa xa-weizoomCardHint" style="display:none;">微众卡支付&nbsp${order.weizoom_card_money}元</span>
+								</span>
+							{{/if}}
 						{{/if}}
 					</td>
 					{{/if}}
