--- a/weapp/apps/customerized_apps/group/templates/editor/group_participances.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/group_participances.html
@@ -118,7 +118,7 @@
 					${item.status}
 				</td>
 				<td>
-					<a href="javascript:void(0);" class="ml5 xa-viewData"> 9/10 团员数</a>
+					<a href="javascript:void(0);" class="ml5 xa-viewData"> 9/10 ${item.members_count}</a>
 				</td>
 			</tr>
 			{{/each}}
